--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <h2>معرض الأعمال</h2>
         <div class="gallery">
             <!-- الصور  -->
-            <img src="C:\Users\AdhaM\Downloads\index.html\img\img3.jpg.jpg" alt="صورة 1">
-            <img src="C:\Users\AdhaM\Downloads\index.html\img\img6.jpg.jpg" alt="صورة 2">
-            <img src="C:\Users\AdhaM\Downloads\index.html\img\img8.jpg.jpg" alt="صورة 3">
-            <img src="C:\Users\AdhaM\Downloads\index.html\img\img9.jpg.jpg" alt="صورة 4">
-            <img src="C:\Users\AdhaM\Downloads\index.html\img\img5.jpg.jpg" alt="صورة 4">
+            <img src="img3.jpg.jpg" alt="صورة 1">
+            <img src="img6.jpg.jpg" alt="صورة 2">
+            <img src="img8.jpg.jpg" alt="صورة 3">
+            <img src="img9.jpg.jpg" alt="صورة 4">
+            <img src="img5.jpg.jpg" alt="صورة 4">
         </div>
     </section>
 
